  macro expansion.
- Try to remove the second parameter from the pp_iterator<>::force_include
  function.
- Fix the trigraph backslash problem in the re2c (C/C++ and IDL) scanners, if
  there is the end of the (internal) buffer just in between a '??/' and a '\n'.

-------------------------------------------------------------------------------

CHANGELOG

Boost V1.80:
  - Fixed #160: one test fails with error C2660 and error C2440 under msvc /permissive- mode
  - Fixed #161: BOOST_WAVE_THROW_NAME_CTX does not result in a context callback and always throws
  - Fixed #162: When Boost headers are included in the preprocessed translation unit, Wave fails in boost/integer.hpp(99)

Boost V1.79:
  - Removed support for C++03 (as a compiler) - previously deprecated in 1.74
  - Fixed #135: Comma operators in array subscripts are deprecated in C++20
  - Fixed #137: Simple unknown directive => found_unknown_directive is not called, stripped of pound.
  - Fixed #138: Empty ifdef block does not emit line directive for missing whitespace
  - Fixed #143: Parsing __has_include() fails with trailing tokens
  - Fixed #145: Sanitizer complains about reset_version()
  - Fixed #147: bitwise operations between different enumeration types are deprecated

Boost V1.75:
  - Introduced C++20 tokens, including the spaceship operator
  - Fixed #94: Tricky line number tracking logic for __LINE__ and __FILE__

Boost V1.74:
  - Fixed TRAC #10733: Hooks not called for expanding specific predefined macros
  - Fixed #58: C++11 long long literals must use consistent case
  - Repaired two samples and added a new one for macro naming enforcement
  - Implemented C++20 changes for variadic macros, including __VA_OPT__()
  - Added C++17 feature __has_include()
  - Deprecate C++98 and C++03. Support will end with 1.77.

Boost V1.73:
  - Fixed TRAC #7822: waveidl sample does not use the IDL lexer
  - Fixed TRAC #9874: Turning off 'include_next' support breaks include