@@ -145,6 +145,7 @@ t_5_035.cpp
 t_5_036.cpp
 t_5_037.cpp
 t_5_038.cpp
+t_5_039.cpp
 
 #
 # unit tests from the mcpp preprocessor validation suite
